fixed jumping issue

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -119,7 +119,7 @@ body {
       box-shadow: 0 2px 3px #ff8800; }
     #header #nav li a:active {
       box-shadow: 0 0 3px #333333 inset;
-      margin-top: 1px; }
+      margin-top: 36px; }
 
 #content {
   color: #aaaaaa;
